--- a/Frontend/public/profile.ejs
+++ b/Frontend/public/profile.ejs
@@ -50,7 +50,7 @@
                 <div class="user-initial"><%= userFound.displayName[0] %></div>
                 <a href="#" id="username-toggle"><%= userFound.displayName %></a>
                 <div id="user-dropdown" class="dropdown-content">
-                    <a href="/rewards"><i class="fas fa-medal"></i> Points and Rewards</a>
+                    <a href="/points"><i class="fas fa-medal"></i> Points and Rewards</a>
                     <a href="/profile"><i class="fas fa-user"></i> Profile</a>
                     <a href="/settings"><i class="fas fa-cog"></i> Settings</a>
                     <a href="/support"><i class="fas fa-question-circle"></i> Help Center</a>
