Fish Classification added

--- a/Frontend/public/home.ejs
+++ b/Frontend/public/home.ejs
@@ -63,6 +63,7 @@
             <a href="/sea-quest"><i class="fas fa-gamepad"></i> Sea Quest</a>
             <a href="/sea-scholar"><i class="fas fa-book-open"></i> Sea Scholar</a>
             <a href="/marine-monitor"><i class="fas fa-bullhorn"></i> Marine Monitor</a>
+            <a href="/fishclassification"><i class="fas fa-envelope"></i>FishClassification</a>
         </div>
     </nav>
 
