First commit for FishClassification

--- a/Frontend/public/home.ejs
+++ b/Frontend/public/home.ejs
@@ -23,6 +23,9 @@
         <ul class="nav-right">
             <!--<li><i class="fas fa-robot chatbot-icon" onclick="openChatbot()"></i></li>-->
             <li>
+                <a href="/fishclassification">
+                    <i class="fa-solid fa-fish"></i>
+                </a>
                 <a href="#" onclick="openChatbot()"> 
                     <img src="../images/chatbot.png" alt="Chatbot Icon" class="chatbot-icon">
                 </a>
