Made some changes

--- a/Frontend/public/home.ejs
+++ b/Frontend/public/home.ejs
@@ -14,7 +14,7 @@
     <nav class="navbar">
         <ul class="nav-left">
             <li class="menu-icon" id="hamburger">
-                <a href="#" id="menu-toggle">&#9776;</a> <!-- Menu icon (hamburger) -->
+                <a href="#" id="menu-toggle">&#9776;</a>
             </li>
             <li class="logo">
                 <a href="/" class="nav-brand">Sea Savvy</a>
